--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -10,16 +10,15 @@ html.no-js
     meta(http-equiv="X-UA-Compatible", content="IE=edge,chrome=1")
     base(href="/")
     title
-    meta(name="description", content="")
-    meta(name="viewport", content="width=device-width")
+    meta(name="description", content="Share trivial design choices and get others to vote on them.")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
     // Place favicon.ico and apple-touch-icon.png in the root directory
     <!-- build:css(app) styles/vendor.css -->
+    <link rel="stylesheet" href="bower_components/pure/pure.css">
     <!-- bower:css -->
-    <link rel="stylesheet" href="bower_components/pure/pure.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
-    <link rel="stylesheet" href="bower_components/pure/pure.css">
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
   body(ng-app="bikeshedmeApp")
@@ -33,7 +32,8 @@ html.no-js
 
     // Add your site or application content here
 
-    div(class="container" ng-include="'partials/main'" ng-controller="MainCtrl")
+    div(ui-view='layout')
+    div(ui-view='content')
 
     // Google Analytics: change UA-XXXXX-X to be your site's ID.
     script.
@@ -44,13 +44,21 @@ html.no-js
 
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/lodash/dist/lodash.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/angular-cache/dist/angular-cache.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
+    <script src="bower_components/angular-promise-tracker/promise-tracker.js"></script>
+    <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <script src="bower_components/ng-file-upload/angular-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/main.js"></script>
     <script src="scripts/controllers/navbar.js"></script>
+    <script src="scripts/services/ModelFetcher.js"></script>
+    <script src="scripts/services/bikeshed.js"></script>
+    <script src="scripts/directives/validationError.js"></script>
     <!-- endbuild -->
 
